--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -138,7 +138,7 @@
                     <div class="col-md-auto mt-3 mb-3 project-tile">
                         <a href="">
                             <div class="mock">
-                                <img class="img-fluid" src="./images/proj3.png" alt="">
+                                <img class="img-fluid" src="./images/proj3.PNG" alt="">
                                 <div class="caption">
                                     <h5 class="project-title">Portfolio Webpage</h5>
                                 </div>
