--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -172,7 +172,7 @@
                                 <img src="./images/cert2.jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="./images/cert3.png" class="d-block w-100" alt="...">
+                                <img src="./images/cert3.PNG" class="d-block w-100" alt="...">
                             </div>
                         </div>
                         <button class="carousel-control-prev ctrl" type="button"
