Update link in index.html

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -113,7 +113,7 @@
                     <h1 class="primary-color head">Projects</h1>
 
                     <div class="col-md-auto mt-3 mb-3 project-tile">
-                        <a href="">
+                        <a href="https://drive.google.com/file/d/1zPoFAOkU8EzVdoSpA9s1Td5HomElnOBK/view?usp=sharing">
                             <div class="mock">
                                 <img class="img-fluid" src="./images/proj1.gif" alt="">
                                 <div class="caption">
