--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -23,7 +23,7 @@
             <li><a href="#sec2" class="link">About Me</a></li>
             <li><a href="#sec3" class="link">Skills</a></li>
             <li><a href="#sec4" class="link">Projects</a></li>
-            <li><a href="#sec5" class="link">Certificates</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1RrZc7pdKQVo8l_AJmy9EhOyPHt2WUPAq?usp=sharing" target="_blank" class="link">Certificates</a></li>
             <li><a href="#" class="link">Contact Me</a></li>
         </ul>
         <div class="burger">
