--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -113,7 +113,7 @@
                     <h1 class="primary-color head">Projects</h1>
 
                     <div class="col-md-auto mt-3 mb-3 project-tile">
-                        <a href="https://drive.google.com/file/d/1zPoFAOkU8EzVdoSpA9s1Td5HomElnOBK/view?usp=sharing">
+                        <a href="https://drive.google.com/file/d/1zPoFAOkU8EzVdoSpA9s1Td5HomElnOBK/view?usp=sharing" target="_blank">
                             <div class="mock">
                                 <img class="img-fluid" src="./images/proj1.gif" alt="">
                                 <div class="caption">
@@ -147,7 +147,7 @@
                     </div>
 
                     <div class="col-md-auto mt-3 mb-3 project-tile">
-                        <a href="https://github.com/chowafu/FaceHandRecog">
+                        <a href="https://github.com/chowafu/FaceHandRecog" target="_blank">
                             <div class="mock">
                                 <img class="img-fluid" src="./images/proj4.jpg" alt="">
                                 <div class="caption">
@@ -156,7 +156,6 @@
                             </div>
                         </a>
                     </div>
-
 
                 </div>
             </section>
